fixed missing semicolon. Adjusted flex setting on nav divs to make the text align-items center

--- a/index.css
+++ b/index.css
@@ -75,10 +75,11 @@ nav {
 nav div {
 	display: flex;
 	width: 25%;
-	height: 70px
+	height: 70px;
 	color: white;
 	/* border-radius: 20%; */
 	text-align: center;
+	align-items: center;
 }
 
 .nav-home {
